add statistics handler
